syntax = "proto3";
package activity;
option go_package = "domain/activity/model";

message Event {
  uint64 index = 1;
  string data = 2;
}

message Transaction {
  string block_hash = 8;
  // @gotags: json:"tx_hash"
  string hash = 1;
  string from = 2;
  string to = 3;
  uint64 nonce = 4;
  string data = 5;
  string value = 6;
  // @gotags: json:"logs,omitempty"
  repeated Event events = 7;
}

message ListTxnsByBlockHashRequest {
  string hash = 1;
}

message ListTxnsByBlockHashResponse {
  repeated Transaction transactions = 1;
}

service Service {
  rpc ListTxnsByBlockHash(ListTxnsByBlockHashRequest) returns (ListTxnsByBlockHashResponse);
}
